--- a/index.html
+++ b/index.html
@@ -1,12 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
+    <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
+    <title>Rose Hack 2019</title>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Rose Hack</title>
+    <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300" rel="stylesheet">
+    <style>
+        body {
+            margin: 0px;
+            overflow: hidden;
+            background-color: black;
+        }
+
+        h1 {
+            color: white;
+            font-family: 'Arvo', serif;
+            font-weight: 800;
+            font-size: 100px;
+            -webkit-touch-callout: none;
+            -webkit-user-select: none;
+            -khtml-user-select: none;
+            -moz-user-select: none;
+            -ms-user-select: none;
+            user-select: none;
+            margin-bottom: 0px;
+            letter-spacing: 10px;
+        }
+
+        p {
+            font-family: 'Open Sans', sans-serif;
+            color: white;
+            letter-spacing: 20px;
+        }
+
+        @media (max-width: 600px) {
+            h1 {
+                font-size: 80px;
+            }
+            p {
+                font-size: 20px;
+                letter-spacing: 10px;
+            }
+        }
+
+        #container {
+            display: flex;
+            height: 100vh;
+            width: 100vw;
+            justify-content: center;
+            align-items: center;
+            position: absolute;
+        }
+
+        .text {
+            text-align: center;
+            text-transform: uppercase;
+        }
+    </style>
 </head>
+
 <body>
-   <h1>Rose Hack</h1> 
+    <div id="container">
+        <div class="text">
+            <h1>Rose Hack</h1>
+            <p>January 18, 2019</p>
+        </div>
+    </div>
+    <script src='./js/three.min.js'></script>
+    <script src='./js/index.js'></script>
 </body>
+
 </html>
