--- a/index.html
+++ b/index.html
@@ -33,6 +33,24 @@
             font-family: 'Open Sans', sans-serif;
             color: white;
             letter-spacing: 20px;
+            margin-bottom: 50px;
+        }
+
+        a {
+            font-family: 'Open Sans', sans-serif;
+            color: white;
+            text-decoration: none;
+            border: 1px solid white;
+            padding: 10px 20px;
+            margin-top: 20px;
+            letter-spacing: 5px;
+            opacity: 0.5;
+            transition: 0.25s;
+        }
+
+        a:hover {
+            padding: 20px 40px;
+            opacity: .8;
         }
 
         @media (max-width: 600px) {
@@ -66,6 +84,7 @@
         <div class="text">
             <h1>Rose Hack</h1>
             <p>January 18, 2019</p>
+            <a href="https://airtable.com/shrqiB7EZPgWzyJ7X" target="_blank">Mailing List</a>
         </div>
     </div>
     <script src='./js/three.min.js'></script>
