--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             /* overflow: hidden; */
             background-color: black;
             font-family: 'Open Sans', sans-serif;
+            scroll-behavior: smooth;
         }
 
         #hero-title {
@@ -141,6 +142,15 @@
             margin-right: auto;
             margin-top: 50px;
         }
+
+        .sponsor-cta {
+            margin-top: 100px;
+            text-align: center;
+        }
+
+        a {
+            color: white;
+        }
     </style>
 </head>
 
@@ -148,7 +158,7 @@
     <div id="hero">
         <div class="text">
             <h1 id="hero-title">Rose Hack</h1>
-            <p>January 18, 2019</p>
+            <p>January 19, 2019</p>
             <p class="location">UC Riverside</p>
             <a class="email-button" href="https://airtable.com/shrqiB7EZPgWzyJ7X" target="_blank">Mailing List</a>
         </div>
@@ -158,7 +168,7 @@
                     <a href="#about">About</a>
                 </li>
                 <li>
-                    <a href="#">Sponsors</a>
+                    <a href="#sponsors">Sponsors</a>
                 </li>
                 <!-- <li>
                     <a href="#">Team</a>
@@ -169,14 +179,20 @@
     <section id="about">
         <h1>About</h1>
         <p>
-            Rose Hack is UC Riverside's hackathon focusing on bridging the gender gap in technology. Our mission is to support and foster
-            innovation for people to learn what they want, build what they want, and connect with who they want.
+            Rose Hack is the first women-centric hackathon in the Inland Empire. Our mission at Rose Hack is to bring together female
+            engineers, designers, and entrepreneurs together to build tomorrow's technologies and make innovation possible.
         </p>
     </section>
     <section id="sponsors">
         <h1>Sponsors</h1>
 
         <img class="sponsor" src="./img/ucr.png" alt="UC Riverside">
+        <p class="sponsor-cta">
+            Interested in sponsoring Rose Hack 2019? Reach out to
+            <a href="mailto:jerry@rosehack.com">Jerry</a>,
+            <a href="mailto:harini@rosehack.com">Harini</a>, or view our
+            <a href="./static/rosehack-2019-sponsorship.pdf">sponsorship package</a>.
+        </p>
     </section>
     <script src='./js/three.min.js'></script>
     <script src='./js/index.js'></script>
