--- a/index.html
+++ b/index.html
@@ -7,156 +7,8 @@
     <meta charset="UTF-8">
     <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300" rel="stylesheet">
-    <style>
-        body {
-            /* height: 100vh; */
-            /* width: 100vw; */
-            margin: 0px;
-            /* overflow: hidden; */
-            background-color: black;
-            font-family: 'Open Sans', sans-serif;
-            scroll-behavior: smooth;
-        }
-
-        #hero-title {
-            color: white;
-            font-family: 'Arvo', serif;
-            font-weight: 800;
-            font-size: 100px;
-            -webkit-touch-callout: none;
-            -webkit-user-select: none;
-            -khtml-user-select: none;
-            -moz-user-select: none;
-            -ms-user-select: none;
-            user-select: none;
-            margin-bottom: 0px;
-            letter-spacing: 10px;
-        }
-
-        p {
-            color: white;
-            letter-spacing: 20px;
-            /* margin-bottom: 50px; */
-        }
-
-        .location {
-            margin-bottom: 50px;
-            letter-spacing: 5px;
-        }
-
-        .email-button {
-            font-family: 'Open Sans', sans-serif;
-            color: white;
-            text-decoration: none;
-            border: 1px solid white;
-            padding: 10px 20px;
-            margin-top: 20px;
-            letter-spacing: 5px;
-            opacity: 0.5;
-            transition: 0.25s;
-        }
-
-        .email-button:hover {
-            padding: 20px 40px;
-            opacity: .8;
-        }
-
-        @media (max-width: 600px) {
-            h1 {
-                font-size: 80px;
-            }
-            p {
-                font-size: 20px;
-                letter-spacing: 10px;
-            }
-        }
-
-        #hero {
-            display: flex;
-            height: 100vh;
-            width: 100%;
-            justify-content: center;
-            align-items: center;
-        }
-
-        .text {
-            text-align: center;
-            text-transform: uppercase;
-        }
-
-        #rose {
-            position: absolute;
-            z-index: -1;
-            top: 0;
-        }
-
-        #nav {
-            color: white;
-            position: absolute;
-            bottom: 0;
-        }
-
-        ul {
-            list-style-type: none;
-            padding-left: 0px;
-        }
-
-        li {
-            float: left;
-        }
-
-        li a {
-            display: block;
-            color: white;
-            text-align: center;
-            padding: 16px;
-            text-decoration: none;
-        }
-
-        #nav a {
-            color: white;
-        }
-
-        section h1 {
-            color: white;
-            font-family: 'Arvo', serif;
-            font-size: 50px;
-            margin-bottom: 15px;
-        }
-
-        section {
-            padding: 0px 10vw;
-            margin-bottom: 100px;
-        }
-
-        section p {
-            letter-spacing: 0px;
-            font-size: 18px;
-        }
-
-        .sponsor {
-            width: 300px;
-            filter: brightness(2000%);
-            display: block;
-            margin-left: auto;
-            margin-right: auto;
-            margin-top: 50px;
-            transition: .5s;
-        }
-
-        .sponsor:hover {
-            width: 325px;
-        }
-
-        .sponsor-cta {
-            margin-top: 100px;
-            text-align: center;
-        }
-
-        a {
-            color: white;
-        }
-    </style>
+    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/body-flowers.css">
 </head>
 
 <body>
@@ -181,32 +33,54 @@
             </ul>
         </div>
     </div>
-    <section id="about">
-        <h1>About</h1>
-        <p>
-            Rose Hack is the first women-centric hackathon in the Inland Empire. Our mission at Rose Hack is to bring together female
-            engineers, designers, and entrepreneurs to build tomorrow's technologies and make innovation possible.
-        </p>
-    </section>
-    <section id="sponsors">
-        <h1>Sponsors</h1>
-        <div class="sponsors-img-container">
-            <a href="https://xyz.xyz" target="_blank">
-                <img class="sponsor" src="./img/xyz.svg" alt="xyz">
-            </a>
-            <a href="https://bcoelc.com" target="_blank">
-                <img class="sponsor" src="./img/ucr.png" alt="UC Riverside">
-            </a>
-        </div>
-        <p class="sponsor-cta">
-            Interested in sponsoring Rose Hack 2019? Reach out to
-            <a href="mailto:jerry@rosehack.com">Jerry</a>,
-            <a href="mailto:harini@rosehack.com">Harini</a>, or view our
-            <a href="./static/rosehack-2019-sponsorship.pdf">sponsorship package</a>.
-        </p>
-    </section>
+    <div>
+        <canvas id="flowers"></canvas>
+        <section id="about">
+            <h1>About</h1>
+            <p>
+                Rose Hack is the first women-centric hackathon at the University of California, Riverside. Founded by the female leaders
+                of the
+                <a href="http://winc.cs.ucr.edu/">Association of Computing Machinery (ACM-W)</a> and the
+                <a href="http://ucrswe.weebly.com/">Society of Women Engineers (SWE)</a>, Rose Hack will be a community where women in STEM can feel supported
+                in sharing and expressing their ideas.
+            </p>
+            <p>
+                Our mission at Rose Hack is to encourage individuals from underrepresented groups in STEM to gain experience, build confidence,
+                and create a strong network together.
+            </p>
+            <p>
+                Rose Hack is a 24-hour hackathon hosted at
+                <a href="https://www.google.com/maps/place/Winston+Chung+Hall,+Riverside,+CA+92507/@33.975265,-117.3281288,17z/data=!3m1!4b1!4m5!3m4!1s0x80dcae5acf0fa1e7:0xa67be5dc0009c039!8m2!3d33.975265!4d-117.3259401">Winston Chung Hall at the University of California Riverside</a>. This is the first women-centric hackathon
+                in the region!
+
+            </p>
+            <p>
+                Rose Hack welcomes all undergraduate and high school students.
+            </p>
+        </section>
+        <section id="sponsors">
+            <h1>Sponsors</h1>
+            <div class="sponsors-img-container">
+                <a href="https://xyz.xyz" target="_blank">
+                    <img class="sponsor" src="./img/xyz.svg" alt="xyz">
+                </a>
+                <a href="https://bcoelc.com" target="_blank">
+                    <img class="sponsor" src="./img/ucr.png" alt="UC Riverside">
+                </a>
+            </div>
+            <p class="sponsor-cta">
+                Interested in sponsoring Rose Hack 2019? Reach out to
+                <a href="mailto:sponsorship@rosehack.com">sponsorship team</a>, or view our
+                <a href="./static/rosehack-2019-sponsorship.pdf" target="_blank">sponsorship package</a>.
+            </p>
+        </section>
+        <footer>
+            <p>👩‍💻 with 🌹 in Riverside, California</p>
+        </footer>
+    </div>
     <script src='./js/three.min.js'></script>
     <script src='./js/index.js'></script>
+    <script src="./js/body-flower.js"></script>
 </body>
 
 </html>
