changed xyz logo and attribution link

--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
         <section id="sponsors">
             <h1>Sponsors</h1>
             <div class="sponsors-img-container">
-                <a href="https://xyz.xyz" target="_blank">
-                    <img class="sponsor" src="./img/xyz.svg" alt="xyz">
+                <a href="https://gen.xyz" target="_blank">
+                    <img class="sponsor" src="./img/xyz.png" alt="xyz">
                 </a>
                 <a href="https://bcoelc.com" target="_blank">
                     <img class="sponsor" src="./img/ucr.png" alt="UC Riverside">
