--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
         </footer>
     </div>
     <script src='./js/three.min.js'></script>
-    <script src='./js/index.js'></script>
-    <script src="./js/body-flower.js"></script>
+    <!-- <script src='./js/index.js'></script> -->
+    <!-- <script src="./js/body-flower.js"></script> -->
 </body>
 
 </html>
