--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
                 <li>
                     <a href="#sponsors">Sponsors</a>
                 </li>
-                <!-- <li>
-                    <a href="#">Team</a>
-                </li> -->
+                <li>
+                    <a href="#faqs">FAQs</a>
+                </li>
             </ul>
         </div>
     </div>
@@ -77,13 +77,78 @@
                 <a href="./static/rosehack-2019-sponsorship.pdf" target="_blank">sponsorship package</a>.
             </p>
         </section>
+        <section id="faqs">
+            <h1>FAQs</h1>
+            <div class="faq-container">
+                <div class="faq">
+                    <h2>What is a Rose Hack?</h2>
+                    <p>
+                        Rose Hack is a 24-hour hackathon open to individuals. 
+                    </p>
+                </div>
+                <div class="faq">
+                    <h2>How much does attending cost?</h2>
+                    <p>
+                        Rose Hack is completely free! You'll get a weekend's worth of swag, snacks, meals, drinks and a place to sleep.
+                    </p>
+                </div>
+                <div class="faq">
+                    <h2>Where is Rose Hack?</h2>
+                    <p>
+                        Rose Hack is hosted in sunny California at the University of California, Riverside.
+                    </p>
+                </div>
+                <div class="faq">
+                    <h2>Is there travel reimbursment?</h2>
+                    <p>
+                        We are working our hardest to provide this benefit.
+                    </p>
+                </div>
+                <div class="faq">
+                    <h2>Can I participate?</h2>
+                    <p>
+                        If you are a high school or undergraduate woman, we'd love to see you here!
+                    </p>
+                </div>
+                <div class="faq">
+                    <h2>How do I apply?</h2>
+                    <p>
+                        Applications will be opening up in September 2019. To stay up to date, join our <a href="https://airtable.com/shrqiB7EZPgWzyJ7X">mailing list</a>.
+                    </p>
+                </div>
+                <div class="faq">
+                    <h2>How many people can be on a team?</h2>
+                    <p>
+                        Teams can be up to 4 people.
+                    </p>
+                </div>
+                <div class="faq">
+                    <h2>Can I hack remotely?</h2>
+                    <p>
+                        Unfortunately, you will have to be present in person to participate.
+                    </p>
+                </div>
+                <div class="faq">
+                    <h2>Can I work on my project before Rose Hack?</h2>
+                    <p>
+                        All projects for Rose Hack must be made during the weekend. Planning and gathering resources before the hackathon is allowed.
+                    </p>
+                </div>
+                <div class="faq">
+                    <h2>Will there be workshops?</h2>
+                    <p>
+                        There will be workshops throughout the event! Want to learn iOS, web development, data science, or anything else? Send us a message and we'll try our best to host a workshop for that topic.
+                    </p>
+                </div>
+            </div>
+        </section>
         <footer>
             <p>👩‍💻 with 🌹 in Riverside, California</p>
         </footer>
     </div>
     <script src='./js/three.min.js'></script>
-    <!-- <script src='./js/index.js'></script> -->
-    <!-- <script src="./js/body-flower.js"></script> -->
+    <script src='./js/index.js'></script>
+    <script src="./js/body-flower.js"></script>
 </body>
 
 </html>
