--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
                 <a href="https://cloud.google.com/" target="_blank">
                     <img class="sponsor" src="./img/gcp.png" alt="Google Cloud Platform" style="filter: brightness(100%);">
                 </a>
+                <a href="https://www.linode.com/" target="_blank">
+                    <img class="sponsor" src="./img/linode.png" alt="Linode">
+                </a>
                 <a href="https://gen.xyz" target="_blank">
                     <img class="sponsor" src="./img/xyz.png" alt="xyz">
                 </a>
