adding 2 more faqs

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
             </p>
             <p>
-                Rose Hack welcomes all undergraduate and high school students.
+                Rose Hack welcomes all undergraduate and high school students women.
             </p>
         </section>
         <section id="sponsors">
@@ -86,7 +86,7 @@
                 <div class="faq">
                     <h2>What is a Rose Hack?</h2>
                     <p>
-                        Rose Hack is a 24-hour hackathon open to individuals. 
+                        Rose Hack is a 24-hour hackathon open to high school and undergraduate women. 
                     </p>
                 </div>
                 <div class="faq">
@@ -143,6 +143,18 @@
                         There will be workshops throughout the event! Want to learn iOS, web development, data science, or anything else? Send us a message and we'll try our best to host a workshop for that topic.
                     </p>
                 </div>
+                <div class="faq">
+                    <h2>What do I need to bring?</h2>
+                    <p>
+                        Make sure to bring your laptop, chargers, toiletries, student ID, and anything else you need for 24 hours of hacking. No need to bring snacks or food, we'll have tons of that for you!
+                    </p>
+                </div>
+                <div class="faq">
+                    <h2>I still have questions!</h2>
+                    <p>
+                        Send us a <a href="mailto:hello@rosehack.com">message</a>!
+                    </p>
+                </div>
             </div>
         </section>
         <footer>
@@ -150,8 +162,8 @@
         </footer>
     </div>
     <script src='./js/three.min.js'></script>
-    <script src='./js/index.js'></script>
-    <script src="./js/body-flower.js"></script>
+    <!-- <script src='./js/index.js'></script> -->
+    <!-- <script src="./js/body-flower.js"></script> -->
 </body>
 
 </html>
