--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
         <section id="sponsors">
             <h1>Sponsors</h1>
             <div class="sponsors-img-container">
+                <a href="http://www.wolfram.com" target="_blank">
+                    <img class="sponsor" src="./img/wolfram.png" alt="Wolfram" style="filter: brightness(100%);">
+                </a>
                 <a href="https://cloud.google.com/" target="_blank">
                     <img class="sponsor" src="./img/gcp.png" alt="Google Cloud Platform" style="filter: brightness(100%);">
                 </a>
