adding animations back

--- a/index.html
+++ b/index.html
@@ -165,8 +165,8 @@
         </footer>
     </div>
     <script src='./js/three.min.js'></script>
-    <!-- <script src='./js/index.js'></script> -->
-    <!-- <script src="./js/body-flower.js"></script> -->
+    <script src='./js/index.js'></script> 
+    <script src="./js/body-flower.js"></script> 
 </body>
 
 </html>
