--- a/index.html
+++ b/index.html
@@ -166,7 +166,15 @@
     </div>
     <script src='./js/three.min.js'></script>
     <script src='./js/index.js'></script> 
-    <script src="./js/body-flower.js"></script> 
+    <script async src="./js/body-flower.js"></script> 
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-124411502-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-124411502-1');
+    </script>
 </body>
 
 </html>
