adding red bull as a sponsor

--- a/index.html
+++ b/index.html
@@ -76,6 +76,9 @@
                 <a href="https://gen.xyz" target="_blank">
                     <img class="sponsor" src="./img/xyz.png" alt="xyz">
                 </a>
+                <a href="https://www.redbull.com/" target="_blank">
+                    <img class="sponsor" src="./img/redbull.png" alt="Red Bull">
+                </a>
                 <a href="https://bcoelc.com" target="_blank">
                     <img class="sponsor" src="./img/ucr.png" alt="UC Riverside">
                 </a>
