adding github as a sponsor, cleaning up layout of other sponsors

--- a/index.html
+++ b/index.html
@@ -61,7 +61,10 @@
         <section id="sponsors">
             <h1>Sponsors</h1>
             <div class="sponsors-img-container">
-                <a href="https://www.esri.com/en-us/home" target="_blank">
+                <a href="https://education.github.com/pack" target="_blank" class="moon-shadow">
+                    <img class="sponsor" src="./img/github.png" alt="GitHub">
+                </a>
+                <a href="https://www.esri.com/en-us/home" target="_blank" class="bluenette">
                     <img class="sponsor" src="./img/esri.png" alt="Esri">
                 </a>
                 <a href="http://www.wolfram.com" target="_blank">
@@ -75,9 +78,6 @@
                 </a>
                 <a href="https://gen.xyz" target="_blank">
                     <img class="sponsor" src="./img/xyz.png" alt="xyz">
-                </a>
-                <a href="https://www.redbull.com/" target="_blank">
-                    <img class="sponsor" src="./img/redbull.png" alt="Red Bull">
                 </a>
                 <a href="https://bcoelc.com" target="_blank">
                     <img class="sponsor" src="./img/ucr.png" alt="UC Riverside">
