adding typeform as a sponsor

--- a/index.html
+++ b/index.html
@@ -79,6 +79,9 @@
                 <a href="https://gen.xyz" target="_blank">
                     <img class="sponsor" src="./img/xyz.png" alt="xyz">
                 </a>
+                <a href="https://www.typeform.com/" target="_blank">
+                    <img class="sponsor" src="./img/typeform.png" alt="Typeform">
+                </a>
                 <a href="https://bcoelc.com" target="_blank">
                     <img class="sponsor" src="./img/ucr.png" alt="UC Riverside">
                 </a>
