adding devlifts as a sponsor

--- a/index.html
+++ b/index.html
@@ -82,6 +82,9 @@
                 <a href="https://www.typeform.com/" target="_blank">
                     <img class="sponsor" src="./img/typeform.png" alt="Typeform">
                 </a>
+                <a href="https://devlifts.io/" target="_blank">
+                    <img class="sponsor" src="./img/devlifts.png" alt="DevLifts">
+                </a>
                 <a href="https://bcoelc.com" target="_blank">
                     <img class="sponsor" src="./img/ucr.png" alt="UC Riverside">
                 </a>
