adding new sponsors, adding hover effect for logos

--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
                 <a href="https://education.github.com/pack" target="_blank" class="moon-shadow">
                     <img class="sponsor" src="./img/github.png" alt="GitHub">
                 </a>
+                <a href="https://mlab.com/" target="_blank" class="moon-shadow">
+                    <img class="sponsor" src="./img/mlab.png" alt="mLab">
+                </a>
                 <a href="https://www.esri.com/en-us/home" target="_blank" class="bluenette">
                     <img class="sponsor" src="./img/esri.png" alt="Esri">
                 </a>
@@ -81,6 +84,12 @@
                 </a>
                 <a href="https://www.typeform.com/" target="_blank">
                     <img class="sponsor" src="./img/typeform.png" alt="Typeform">
+                </a>
+                <a href="https://wesbos.com/" target="_blank">
+                    <img class="sponsor" src="./img/wesbos.png" alt="Wes Bos">
+                </a>
+                <a href="https://www.leveluptutorials.com/" target="_blank">
+                    <img class="sponsor" src="./img/leveluptutorials.png" alt="Level Up Tutorials">
                 </a>
                 <a href="https://devlifts.io/" target="_blank">
                     <img class="sponsor" src="./img/devlifts.png" alt="DevLifts">
@@ -173,7 +182,7 @@
             </div>
         </section>
         <footer>
-            <p>👩‍💻 with 🌹 in Riverside, California</p>
+            <p>Built with 🌹 in Riverside, California</p>
         </footer>
     </div>
     <script src='./js/three.min.js'></script>
