--- a/index.html
+++ b/index.html
@@ -79,6 +79,9 @@
                 <a href="https://www.linode.com/" target="_blank">
                     <img class="sponsor" src="./img/linode.png" alt="Linode">
                 </a>
+                <a href="https://www.getpostman.com/" target="_blank">
+                    <img class="sponsor" src="./img/postman.png" alt="Postman">
+                </a>
                 <a href="https://gen.xyz" target="_blank">
                     <img class="sponsor" src="./img/xyz.png" alt="xyz">
                 </a>
