--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
             </p>
             <p>
-                Rose Hack welcomes all undergraduate and high school students women.
+                Rose Hack welcomes all undergraduate and high school students.
             </p>
         </section>
         <section id="sponsors">
