adding social tags

--- a/index.html
+++ b/index.html
@@ -8,6 +8,25 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300" rel="stylesheet">
     <link rel="stylesheet" href="./css/main.css">
     <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
+    <meta name="theme-color" content="#acccec">
+    <meta name="description" content="UC Riverside's 24-hour Women-centric Hackathon">
+
+    <meta property="og:url" content="https://rosehack.com">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Rose Hack 2019">
+    <meta property="og:image" content="https://rosehack.com/static/icon.png">
+    <meta property="og:description" content="UC Riverside's 24-hour Women-centric Hackathon">
+    <meta property="og:site_name" content="Rose Hack 2019">
+    <meta property="og:locale" content="en_US">
+    <meta property="article:author" content="Rose Hack at UC Riverside">
+
+    <meta name="twitter:card" content="UC Riverside's 24-hour Women-centric Hackathon">
+    <meta name="twitter:site" content="@rosehack_ucr">
+    <meta name="twitter:creator" content="@johnphamous">
+    <meta name="twitter:url" content="https://rosehack.com">
+    <meta name="twitter:title" content="Rose Hack 2019">
+    <meta name="twitter:description" content="UC Riverside's 24-hour Women-centric Hackathon">
+    <meta name="twitter:image" content="https://rosehack.com/static/icon.png">
 </head>
 <body>
     <div class="hero">
