swapping out hero animation, adding mobile layout

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </p>
     </section>
 
-    <section id="sponsors" class="background-blue">
+    <section id="sponsors" class="background-green">
         <h1>Sponsors</h1>
         <div class="sponsors-img-container">
             <a href="https://education.github.com/pack" target="_blank" class="moon-shadow">
@@ -80,10 +80,10 @@
                 <img class="sponsor" src="./img/esri.png" alt="Esri">
             </a>
             <a href="http://www.wolfram.com" target="_blank">
-                <img class="sponsor" src="./img/wolfram.png" alt="Wolfram" style="filter: brightness(100%);">
+                <img class="sponsor" src="./img/wolfram.png" alt="Wolfram">
             </a>
             <a href="https://cloud.google.com/" target="_blank">
-                <img class="sponsor" src="./img/gcp.png" alt="Google Cloud Platform" style="filter: brightness(100%);">
+                <img class="sponsor" src="./img/gcp.png" alt="Google Cloud Platform">
             </a>
             <a href="https://www.linode.com/" target="_blank">
                 <img class="sponsor" src="./img/linode.png" alt="Linode">
