--- a/index.html
+++ b/index.html
@@ -97,6 +97,9 @@
             <a href="https://www.typeform.com/" target="_blank">
                 <img class="sponsor" src="./img/typeform.png" alt="Typeform">
             </a>
+            <a href="https://vueschool.io/" target="_blank">
+                <img class="sponsor" src="./img/vueschool.png" alt="Vue School">
+            </a>
             <a href="https://wesbos.com/" target="_blank">
                 <img class="sponsor" src="./img/wesbos.png" alt="Wes Bos">
             </a>
