wrapping up layout for launch

--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
     <div class="hero">
         <div class="hero-overlay">
             <img class="hero-logo" src="./img/rosehacklogo.png" alt="Rose Hack Logo">
-            <div class="hero-text">
-                <p>January 19, 2019</p>
-                <p class="location">UC Riverside's 24-hour Women-centric Hackathon</p>
-                <a class="email-button" href="https://airtable.com/shrqiB7EZPgWzyJ7X" target="_blank">Mailing List</a>
-            </div>
+        </div>
+        <div class="hero-text">
+            <p>January 19, 2019</p>
+            <p class="location">UC Riverside's Women-centric Hackathon</p>
+            <a class="email-button" href="https://airtable.com/shrqiB7EZPgWzyJ7X" target="_blank">Mailing List</a>
         </div>
 
         <div id="rosehack-hero"></div>
@@ -65,6 +65,25 @@
         <p>
             Rose Hack welcomes all undergraduate and high school students.
         </p>
+
+    </section>
+
+    <section class="background-blue">
+        <h1>The Numbers</h1>
+        <div class="row stats">
+            <div class="row-item">
+                <h2>200</h2>
+                <p>Hackers</p>
+            </div>
+            <div class="row-item">
+                <h2>24</h2>
+                <p>Hours</p>
+            </div>
+            <div class="row-item">
+                <h2>21</h2>
+                <p>Organizers</p>
+            </div>
+        </div>
     </section>
 
     <section id="sponsors" class="background-green">
@@ -85,14 +104,14 @@
             <a href="https://cloud.google.com/" target="_blank">
                 <img class="sponsor" src="./img/gcp.png" alt="Google Cloud Platform">
             </a>
-            <a href="https://www.linode.com/" target="_blank">
-                <img class="sponsor" src="./img/linode.png" alt="Linode">
-            </a>
             <a href="https://www.getpostman.com/" target="_blank">
                 <img class="sponsor" src="./img/postman.png" alt="Postman">
             </a>
             <a href="https://gen.xyz" target="_blank">
                 <img class="sponsor" src="./img/xyz.png" alt="xyz">
+            </a>
+            <a href="https://www.linode.com/" target="_blank">
+                <img class="sponsor" src="./img/linode.png" alt="Linode">
             </a>
             <a href="https://www.typeform.com/" target="_blank">
                 <img class="sponsor" src="./img/typeform.png" alt="Typeform">
@@ -120,7 +139,7 @@
         </p>
     </section>
     
-    <section id="faqs" class="background-yellow">
+    <section id="faqs" class="background-gray">
         <h1>FAQs</h1>
         <div class="faq-container">
             <div class="faq">
