--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300" rel="stylesheet">
     <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
     <meta name="theme-color" content="#acccec">
     <meta name="description" content="UC Riverside's 24-hour Women-centric Hackathon">
@@ -138,14 +139,14 @@
             <a href="./static/rosehack-2019-sponsorship.pdf" target="_blank">sponsorship package</a>.
         </p>
     </section>
-    
+
     <section id="faqs" class="background-gray">
         <h1>FAQs</h1>
         <div class="faq-container">
             <div class="faq">
                 <h2>What is a Rose Hack?</h2>
                 <p>
-                    Rose Hack is a 24-hour hackathon open to high school and undergraduate women. 
+                    Rose Hack is a 24-hour hackathon open to high school and undergraduate women.
                 </p>
             </div>
             <div class="faq">
@@ -216,8 +217,22 @@
             </div>
         </div>
     </section>
-    
+
     <footer>
+        <div class="social">
+            <a href="https://www.facebook.com/rosehackucr/">
+                <i class="fab fa-facebook-f"></i>
+            </a>
+            <a href="https://twitter.com/rosehack_ucr">
+                <i class="fab fa-twitter"></i>
+            </a>
+            <a href="https://www.linkedin.com/company/rose-hack/">
+                <i class="fab fa-linkedin-in"></i>
+            </a>
+            <a href="https://www.instagram.com/rosehackucr/">
+                <i class="fab fa-instagram"></i>
+            </a>
+        </div>
         <p>Built with 🌹 in Riverside, California</p>
     </footer>
 
