add coffee image in 'about'

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
     <section id="about" class="background-gray">
         <h1>About</h1>
         <p>
+            <img class="coffee" src="./img/coffee.png">
             Rose Hack is the first women-centric hackathon at the University of California, Riverside. Founded by the female leaders
             of the
             <a href="http://winc.cs.ucr.edu/">Association of Computing Machinery (ACM-W)</a> and the
