add coffee image and fix social links

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <section id="about" class="background-gray">
         <h1>About</h1>
         <p>
-            <img class="coffee" src="./img/coffee.png">
+            <img class="coffee-img" src="./img/coffee.png">
             Rose Hack is the first women-centric hackathon at the University of California, Riverside. Founded by the female leaders
             of the
             <a href="http://winc.cs.ucr.edu/">Association of Computing Machinery (ACM-W)</a> and the
@@ -221,16 +221,16 @@
 
     <footer>
         <div class="social">
-            <a href="https://www.facebook.com/rosehackucr/">
+            <a href="https://www.facebook.com/rosehackucr/" target="_blank" alt="Facebook">
                 <i class="fab fa-facebook-f"></i>
             </a>
-            <a href="https://twitter.com/rosehack_ucr">
+            <a href="https://twitter.com/rosehack_ucr" target="_blank" alt="Twitter">
                 <i class="fab fa-twitter"></i>
             </a>
-            <a href="https://www.linkedin.com/company/rose-hack/">
+            <a href="https://www.linkedin.com/company/rose-hack/" target="_blank" alt="Rose Hack">
                 <i class="fab fa-linkedin-in"></i>
             </a>
-            <a href="https://www.instagram.com/rosehackucr/">
+            <a href="https://www.instagram.com/rosehackucr/" target="_blank" alt="Instagram">
                 <i class="fab fa-instagram"></i>
             </a>
         </div>
