adding codepen as a sponsor

--- a/index.html
+++ b/index.html
@@ -118,6 +118,9 @@
             <a href="https://www.typeform.com/" target="_blank">
                 <img class="sponsor" src="./img/typeform.png" alt="Typeform">
             </a>
+            <a href="https://codepen.io/" target="_blank">
+                <img class="sponsor" src="./img/codepen.png" alt="Codepen">
+            </a>
             <a href="https://www.stickergiant.com/" target="_blank">
                 <img class="sponsor" src="./img/stickergiant.png" alt="Sticker Giant">
             </a>
