--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
     <title>Rose Hack 2019</title>
@@ -7,7 +8,8 @@
     <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300" rel="stylesheet">
     <link rel="stylesheet" href="./css/main.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
+        crossorigin="anonymous">
     <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
     <meta name="theme-color" content="#acccec">
     <meta name="description" content="UC Riverside's 24-hour Women-centric Hackathon">
@@ -29,6 +31,7 @@
     <meta name="twitter:description" content="UC Riverside's 24-hour Women-centric Hackathon">
     <meta name="twitter:image" content="https://rosehack.com/static/icon.png">
 </head>
+
 <body>
     <div class="hero">
         <div class="hero-overlay">
@@ -48,19 +51,23 @@
         <h1>About</h1>
         <p>
             <img class="coffee-img" src="./img/coffee.png">
-            Rose Hack is the first women-centric hackathon at the University of California, Riverside. Founded by the female leaders
+            Rose Hack is the first women-centric hackathon at the University of California, Riverside. Founded by the
+            female leaders
             of the
             <a href="http://winc.cs.ucr.edu/">Association of Computing Machinery (ACM-W)</a> and the
-            <a href="http://ucrswe.weebly.com/">Society of Women Engineers (SWE)</a>, Rose Hack will be a community where women in STEM can feel supported
+            <a href="http://ucrswe.weebly.com/">Society of Women Engineers (SWE)</a>, Rose Hack will be a community
+            where women in STEM can feel supported
             in sharing and expressing their ideas.
         </p>
         <p>
-            Our mission at Rose Hack is to encourage individuals from underrepresented groups in STEM to gain experience, build confidence,
+            Our mission at Rose Hack is to encourage individuals from underrepresented groups in STEM to gain
+            experience, build confidence,
             and create a strong network together.
         </p>
         <p>
             Rose Hack is a 24-hour hackathon hosted at
-            <a href="https://www.google.com/maps/place/Winston+Chung+Hall,+Riverside,+CA+92507/@33.975265,-117.3281288,17z/data=!3m1!4b1!4m5!3m4!1s0x80dcae5acf0fa1e7:0xa67be5dc0009c039!8m2!3d33.975265!4d-117.3259401">Winston Chung Hall at the University of California Riverside</a>. This is the first women-centric hackathon
+            <a href="https://www.google.com/maps/place/Winston+Chung+Hall,+Riverside,+CA+92507/@33.975265,-117.3281288,17z/data=!3m1!4b1!4m5!3m4!1s0x80dcae5acf0fa1e7:0xa67be5dc0009c039!8m2!3d33.975265!4d-117.3259401">Winston
+                Chung Hall at the University of California Riverside</a>. This is the first women-centric hackathon
             in the region!
 
         </p>
@@ -155,7 +162,8 @@
             <div class="faq">
                 <h2>How much does attending cost?</h2>
                 <p>
-                    Rose Hack is completely free! You'll get a weekend's worth of swag, snacks, meals, drinks and a place to sleep.
+                    Rose Hack is completely free! You'll get a weekend's worth of swag, snacks, meals, drinks and a
+                    place to sleep.
                 </p>
             </div>
             <div class="faq">
@@ -179,7 +187,8 @@
             <div class="faq">
                 <h2>How do I apply?</h2>
                 <p>
-                    Applications will be opening up in September 2018. To stay up to date, join our <a href="https://airtable.com/shrqiB7EZPgWzyJ7X">mailing list</a>.
+                    Applications will be opening up in September 2018. To stay up to date, join our <a href="https://airtable.com/shrqiB7EZPgWzyJ7X">mailing
+                        list</a>.
                 </p>
             </div>
             <div class="faq">
@@ -197,19 +206,22 @@
             <div class="faq">
                 <h2>Can I work on my project before Rose Hack?</h2>
                 <p>
-                    All projects for Rose Hack must be made during the weekend. Planning and gathering resources before the hackathon is allowed.
+                    All projects for Rose Hack must be made during the weekend. Planning and gathering resources before
+                    the hackathon is allowed.
                 </p>
             </div>
             <div class="faq">
                 <h2>Will there be workshops?</h2>
                 <p>
-                    There will be workshops throughout the event! Want to learn iOS, web development, data science, or anything else? Send us a message and we'll try our best to host a workshop for that topic.
+                    There will be workshops throughout the event! Want to learn iOS, web development, data science, or
+                    anything else? Send us a message and we'll try our best to host a workshop for that topic.
                 </p>
             </div>
             <div class="faq">
                 <h2>What do I need to bring?</h2>
                 <p>
-                    Make sure to bring your laptop, chargers, toiletries, student ID, and anything else you need for 24 hours of hacking. No need to bring snacks or food, we'll have tons of that for you!
+                    Make sure to bring your laptop, chargers, toiletries, student ID, and anything else you need for 24
+                    hours of hacking. No need to bring snacks or food, we'll have tons of that for you!
                 </p>
             </div>
             <div class="faq">
@@ -244,10 +256,14 @@
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-124411502-1"></script>
     <script>
         window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
+        function gtag() { dataLayer.push(arguments); }
         gtag('js', new Date());
 
         gtag('config', 'UA-124411502-1');
     </script>
+    <script>
+        console.log('%cWhy hello there! Interested in web dev? Join the team! Send us a message at hello@rosehack.com', 'font-size: 30px; background: red; color: white;')
+    </script>
 </body>
+
 </html>
