adding sketch as a sponsor, updating vue school logo

--- a/index.html
+++ b/index.html
@@ -112,6 +112,9 @@
             <a href="https://cloud.google.com/" target="_blank">
                 <img class="sponsor" src="./img/gcp.png" alt="Google Cloud Platform">
             </a>
+            <a href="https://www.sketchapp.com/" target="_blank">
+                <img class="sponsor" src="./img/sketch.png" alt="Sketch">
+            </a>
             <a href="https://www.getpostman.com/" target="_blank">
                 <img class="sponsor" src="./img/postman.png" alt="Postman">
             </a>
