adding konami code

--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
     <meta name="twitter:title" content="Rose Hack 2019">
     <meta name="twitter:description" content="UC Riverside's 24-hour Women-centric Hackathon">
     <meta name="twitter:image" content="https://rosehack.com/static/icon.png">
+    <style>
+
+    </style>
 </head>
 
 <body>
@@ -159,7 +162,8 @@
             <div class="faq">
                 <h2>What is a Rose Hack?</h2>
                 <p>
-                  Rose Hack is a 24-hour hackathon open to high school and undergraduates with priority towards women and other underrepresented groups in tech.
+                    Rose Hack is a 24-hour hackathon open to high school and undergraduates with priority towards women
+                    and other underrepresented groups in tech.
                 </p>
             </div>
             <div class="faq">
@@ -253,7 +257,7 @@
         </div>
         <p>Built with 🌹 in Riverside, California</p>
     </footer>
-
+    <audio src="./static/darude.mp3" class="konami-music"></audio>
     <script src="./js/bodymovin.js"></script>
     <script src="./js/hero-animation.js"></script>
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-124411502-1"></script>
@@ -267,6 +271,7 @@
     <script>
         console.log('%cWhy hello there! Interested in web dev? Join the team! Send us a message at hello@rosehack.com', 'font-size: 30px; background: red; color: white;')
     </script>
+    <script src="./js/disco.js"></script>
 </body>
 
 </html>
