adding accessibility and performance improvements

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <section id="about" class="background-gray">
         <h1>About</h1>
         <p>
-            <img class="coffee-img" src="./img/coffee.png">
+            <img class="coffee-img" src="./img/coffee.png" alt="Image of Coffee Cup">
             Rose Hack is the first women-centric hackathon at the University of California, Riverside. Founded by the
             female leaders
             of the
@@ -100,52 +100,52 @@
     <section id="sponsors" class="background-green">
         <h1>Sponsors</h1>
         <div class="sponsors-img-container">
-            <a href="https://education.github.com/pack" target="_blank" class="moon-shadow">
+            <a href="https://education.github.com/pack" target="_blank" class="moon-shadow" rel="noopener">
                 <img class="sponsor" src="./img/github.png" alt="GitHub">
             </a>
-            <a href="https://mlab.com/" target="_blank" class="moon-shadow">
+            <a href="https://mlab.com/" target="_blank" class="moon-shadow" rel="noopener">
                 <img class="sponsor" src="./img/mlab.png" alt="mLab">
             </a>
-            <a href="https://www.esri.com/en-us/home" target="_blank" class="bluenette">
+            <a href="https://www.esri.com/en-us/home" target="_blank" class="bluenette" rel="noopener">
                 <img class="sponsor" src="./img/esri.png" alt="Esri">
             </a>
-            <a href="http://www.wolfram.com" target="_blank">
+            <a href="http://www.wolfram.com" target="_blank" rel="noopener">
                 <img class="sponsor" src="./img/wolfram.png" alt="Wolfram">
             </a>
-            <a href="https://cloud.google.com/" target="_blank">
+            <a href="https://cloud.google.com/" target="_blank" rel="noopener">
                 <img class="sponsor" src="./img/gcp.png" alt="Google Cloud Platform">
             </a>
-            <a href="https://www.sketchapp.com/" target="_blank">
+            <a href="https://www.sketchapp.com/" target="_blank" rel="noopener">
                 <img class="sponsor" src="./img/sketch.png" alt="Sketch">
             </a>
-            <a href="https://www.getpostman.com/" target="_blank">
+            <a href="https://www.getpostman.com/" target="_blank" rel="noopener">
                 <img class="sponsor" src="./img/postman.png" alt="Postman">
             </a>
-            <a href="https://gen.xyz" target="_blank">
+            <a href="https://gen.xyz" target="_blank" rel="noopener">
                 <img class="sponsor" src="./img/xyz.png" alt="xyz">
             </a>
-            <a href="https://www.linode.com/" target="_blank">
+            <a href="https://www.linode.com/" target="_blank" rel="noopener">
                 <img class="sponsor" src="./img/linode.png" alt="Linode">
             </a>
-            <a href="https://www.typeform.com/" target="_blank">
+            <a href="https://www.typeform.com/" target="_blank" rel="noopener">
                 <img class="sponsor" src="./img/typeform.png" alt="Typeform">
             </a>
-            <a href="https://codepen.io/" target="_blank">
+            <a href="https://codepen.io/" target="_blank" rel="noopener">
                 <img class="sponsor" src="./img/codepen.png" alt="Codepen">
             </a>
-            <a href="https://www.stickergiant.com/" target="_blank">
+            <a href="https://www.stickergiant.com/" target="_blank" rel="noopener">
                 <img class="sponsor" src="./img/stickergiant.png" alt="Sticker Giant">
             </a>
-            <a href="https://vueschool.io/" target="_blank">
+            <a href="https://vueschool.io/" target="_blank" rel="noopener">
                 <img class="sponsor" src="./img/vueschool.png" alt="Vue School">
             </a>
-            <a href="https://wesbos.com/" target="_blank">
+            <a href="https://wesbos.com/" target="_blank" rel="noopener">
                 <img class="sponsor" src="./img/wesbos.png" alt="Wes Bos">
             </a>
-            <a href="https://www.leveluptutorials.com/" target="_blank">
+            <a href="https://www.leveluptutorials.com/" target="_blank" rel="noopener">
                 <img class="sponsor" src="./img/leveluptutorials.png" alt="Level Up Tutorials">
             </a>
-            <a href="https://devlifts.io/" target="_blank">
+            <a href="https://devlifts.io/" target="_blank" rel="noopener">
                 <img class="sponsor" src="./img/devlifts.png" alt="DevLifts">
             </a>
         </div>
@@ -194,7 +194,8 @@
             <div class="faq">
                 <h2>How do I apply?</h2>
                 <p>
-                    Applications will be opening up in September 2018. To stay up to date, join our <a href="https://airtable.com/shrqiB7EZPgWzyJ7X">mailing
+                    Applications will be opening up in September 2018. To stay up to date, join our <a href="https://airtable.com/shrqiB7EZPgWzyJ7X"
+                        rel="noopener">mailing
                         list</a>.
                 </p>
             </div>
@@ -242,16 +243,17 @@
 
     <footer>
         <div class="social">
-            <a href="https://www.facebook.com/rosehackucr/" target="_blank" alt="Facebook">
+            <a href="https://www.facebook.com/rosehackucr/" target="_blank" alt="Facebook" rel="noopener" aria-label="Facebook URL">
                 <i class="fab fa-facebook-f"></i>
             </a>
-            <a href="https://twitter.com/rosehack_ucr" target="_blank" alt="Twitter">
+            <a href="https://twitter.com/rosehack_ucr" target="_blank" alt="Twitter" rel="noopener" aria-label="Twitter URL">
                 <i class="fab fa-twitter"></i>
             </a>
-            <a href="https://www.linkedin.com/company/rose-hack/" target="_blank" alt="Rose Hack">
+            <a href="https://www.linkedin.com/company/rose-hack/" target="_blank" alt="Rose Hack" rel="noopener"
+                aria-label="LinkedIn URL">
                 <i class="fab fa-linkedin-in"></i>
             </a>
-            <a href="https://www.instagram.com/rosehackucr/" target="_blank" alt="Instagram">
+            <a href="https://www.instagram.com/rosehackucr/" target="_blank" alt="Instagram" rel="noopener" aria-label="Instagram URL">
                 <i class="fab fa-instagram"></i>
             </a>
         </div>
