add digital ocean

--- a/index.html
+++ b/index.html
@@ -148,6 +148,9 @@
             <a href="https://devlifts.io/" target="_blank" rel="noopener">
                 <img class="sponsor" src="./img/devlifts.png" alt="DevLifts">
             </a>
+            <a href="https://www.digitalocean.com/" target="_blank" rel="noopener">
+                <img class="sponsor" src="./img/digitalocean.png" alt="Digital Ocean">
+            </a>
         </div>
         <p class="sponsor-cta">
             Interested in sponsoring Rose Hack 2019? Reach out to
