adding framer logo

--- a/index.html
+++ b/index.html
@@ -115,6 +115,9 @@
             <a href="https://cloud.google.com/" target="_blank" rel="noopener">
                 <img class="sponsor" src="./img/gcp.png" alt="Google Cloud Platform">
             </a>
+            <a href="https://framer.com/" target="_blank" rel="noopener">
+                <img class="sponsor" src="./img/framer.png" alt="Framer">
+            </a>
             <a href="https://www.sketchapp.com/" target="_blank" rel="noopener">
                 <img class="sponsor" src="./img/sketch.png" alt="Sketch">
             </a>
