adding snapchat as a sponsor

--- a/index.html
+++ b/index.html
@@ -112,6 +112,9 @@
             <a href="http://www.wolfram.com" target="_blank" rel="noopener">
                 <img class="sponsor" src="./img/wolfram.png" alt="Wolfram">
             </a>
+            <a href="https://www.spectacles.com/" target="_blank" rel="noopener">
+                <img class="sponsor" src="./img/snapchat.png" alt="Snapchat Spectacles">
+            </a>
             <a href="https://cloud.google.com/" target="_blank" rel="noopener">
                 <img class="sponsor" src="./img/gcp.png" alt="Google Cloud Platform">
             </a>
