--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
         <div class="hero-text">
             <p>January 19, 2019</p>
             <p class="location">UC Riverside's Women-centric Hackathon</p>
-            <a class="email-button" href="https://airtable.com/shrqiB7EZPgWzyJ7X" target="_blank">Mailing List</a>
+            <a class="typeform-share button" href="https://rosehack.typeform.com/to/wRygPb" data-mode="popup" style="display:inline-block;text-decoration:none;background-color:#89BC62;color:white;cursor:pointer;font-family:Helvetica,Arial,sans-serif;font-size:20px;line-height:50px;text-align:center;margin:0;height:50px;padding:0px 33px;border-radius:25px;max-width:100%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;font-weight:bold;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;"
+                target="_blank">Register for Rose Hack </a>
         </div>
 
         <div id="rosehack-hero"></div>
@@ -282,6 +283,7 @@
     <script>
         console.log('%cWhy hello there! Interested in web dev? Join the team! Send us a message at hello@rosehack.com', 'font-size: 30px; background: red; color: white;')
     </script>
+    <script> (function () { var qs, js, q, s, d = document, gi = d.getElementById, ce = d.createElement, gt = d.getElementsByTagName, id = "typef_orm_share", b = "https://embed.typeform.com/"; if (!gi.call(d, id)) { js = ce.call(d, "script"); js.id = id; js.src = b + "embed.js"; q = gt.call(d, "script")[0]; q.parentNode.insertBefore(js, q) } })() </script>
     <script src="./js/disco.js"></script>
 </body>
 
