--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
             <img class="hero-logo" src="./img/rosehacklogo.png" alt="Rose Hack Logo">
         </div>
         <div class="hero-text">
-            <p>January 19, 2019</p>
+            <p>January 19-20, 2019</p>
             <p class="location">UC Riverside's Women-centric Hackathon</p>
             <a class="typeform-share button" href="https://rosehack.typeform.com/to/wRygPb" data-mode="popup" style="display:inline-block;text-decoration:none;background-color:#89BC62;color:white;cursor:pointer;font-family:Helvetica,Arial,sans-serif;font-size:20px;line-height:50px;text-align:center;margin:0;height:50px;padding:0px 33px;border-radius:25px;max-width:100%;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;font-weight:bold;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale;"
-                target="_blank">Register for Rose Hack </a>
+                target="_blank">Register</a>
         </div>
 
         <div id="rosehack-hero"></div>
